'added routes and updated handlebars'

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -10,7 +10,6 @@
     <nav>
   <ul>
     <li><a href="/">Home</a></li>
-    <li><a href="/posts">Posts</a></li>
     {{#if loggedIn}}
       <li><a href="/dashboard">Dashboard</a></li>
       <li><a href="/logout">Logout</a></li>
@@ -24,3 +23,6 @@
 </body>
 </html>
 
+
+
+{{!-- landing page should be posts of users but you have to login to create your own post. Dashboard page I will be able to add/edit/delete after loggedin.--}}
