--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -1,5 +1,5 @@
 <h1>Sign Up</h1>
-<form action="/api/users" method="POST">
+<form>
   <div>
     <label for="username">Username:</label>
     <input type="text" id="username" name="username" required>
