--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -1,11 +1,3 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Dashboard</title>
-</head>
 <body>
   <h1>Welcome to your Dashboard, {{user.username}}!</h1>
   <h2>Your Posts</h2>
@@ -28,5 +20,6 @@
   {{else}}
     <p>You haven't made any comments yet.</p>
   {{/if}}
+  <button id="new-post-button">Add New Post</button>
 </body>
-</html>
+
