'added front-end js for post'

--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -21,5 +21,6 @@
     <p>You haven't made any comments yet.</p>
   {{/if}}
   <button id="new-post-button">Add New Post</button>
+  <script src="/js/newPost.js"></script>
 </body>
 
