--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,7 +1,7 @@
 {{#each posts}}
   <h2>{{title}}</h2>
   <p>{{content}}</p>
-  <p>Created by {{user.username}} on {{created_at}}</p>
+  <p>Created by {{user.username}} on {{format_date created_at}}</p>
 {{/each}}
 
 
