--- a/views/new-post.handlebars
+++ b/views/new-post.handlebars
@@ -1,10 +1,10 @@
 <body>
   <h1>Add New Post</h1>
-  <form action="/post" method="post">
+  <form id="new-post-form">
     <label for="title">Title:</label>
-    <input type="text" name="title" id="title">
+    <input type="text" name="title" id="post-title">
     <label for="content">Content:</label>
-    <textarea name="content" id="content"></textarea>
+    <textarea name="content" id="post-content"></textarea>
     <button type="submit">Create Post</button>
   </form>
 </body>
