'added create post functionality'

--- a/views/new-post.handlebars
+++ b/views/new-post.handlebars
@@ -7,5 +7,8 @@
     <textarea name="content" id="post-content"></textarea>
     <button type="submit">Create Post</button>
   </form>
+  <script src='/js/createPost.js'></script>
 </body>
+
+
 
