--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -4,7 +4,7 @@
   {{#if user.posts.length}}
     <ul>
       {{#each user.posts}}
-        <li><a href="/post/{{id}}">{{title}}</a></li>
+        <li><a href="/edit-post/{{id}}">{{title}}</a></li>
       {{/each}}
     </ul>
   {{else}}
