'adding css to webpage'

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -1,26 +1,39 @@
-<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="stylesheet"
+      href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
+    />
+    <link rel="stylesheet" href="./css/style.css" />
     <title>Blog-Site</title>
   </head>
   <body>
-    <nav>
-      <ul>
-        <li><a href="/">Home</a></li>
-        {{#if logged_in}}
-        <li><a href="/dashboard">Dashboard</a></li>
-        <li><a id="logout" href="#">Logout</a></li>
-        {{else}}
-        <li><a href="/login">Login</a></li>
-        {{/if}}
-      </ul>
-    </nav>
-    {{{ body }}}
-  <script src="/js/logout.js"></script>
+    <header>
+      <div class="row justify-content-center">
+        <h1>Tech Blog Site</h1>
+        <nav>
+          <ul class="row">
+            <li><a href="/">Home</a></li>
+            {{#if logged_in}}
+              <li><a href="/dashboard">Dashboard</a></li>
+              <li><a id="logout" href="#">Logout</a></li>
+            {{else}}
+              <li><a href="/login">Login</a></li>
+            {{/if}}
+          </ul>
+        </nav>
+      </div>
+    </header>
+    {{{body}}}
+    <script src="/js/logout.js"></script>
+    <script
+      src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
+    ></script>
+    <footer>
+      <p class="row justify-content-center">Trademark 2023®<p>
+    </footer>
   </body>
 </html>
-
-
