--- a/public/css/style.css
+++ b/public/css/style.css
@@ -4,10 +4,13 @@ html {
 
 body {
     font-family: Arial, Helvetica, sans-serif;
-    height: 100%;
     position: relative;
-    min-height: 100vh;
     padding-bottom: 100px; /* Height of the footer */
+}
+
+#login-container {
+    padding: 5rem;
+    height: 100%;
 }
 
 footer {
