--- a/public/css/style.css
+++ b/public/css/style.css
@@ -8,6 +8,22 @@ body {
     padding-bottom: 100px; /* Height of the footer */
 }
 
+.post {
+    background-color: beige;
+    border-style: solid;
+    border-color: black;
+    transform: scale(1);
+    transition: transform 0.2s ease-in-out;
+    transition: filter 0.3s ease-out;
+    margin: 1rem;
+    padding: 1rem;
+}
+
+.post:hover{
+    transform: scale(1.1);
+    filter: contrast(1.2);
+}
+
 #login-container {
     padding: 5rem;
     height: 100%;
@@ -55,5 +71,11 @@ h4,h5,h6 {
 }
 
 p {
-    font-size: 1.5rem;
+    font-size: 1.25rem;
 }
+
+.remove-blue, .remove-blue:hover {
+    color:black;
+    text-decoration: none;
+}
+
