--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -1,23 +1,33 @@
-  <h1>Welcome to your Dashboard, {{user.username}}!</h1>
-  <h2>Your Posts</h2>
-  {{#if user.posts.length}}
-    <ul>
+  <h2 class="row m-2 p-2 justify-content-center">Welcome to your Dashboard, {{user.username}}!</h2>
+  <div class="container">
+    <div class="m-4 p-2 justify-content-center">
+      <h3>Your Posts</h2>
+      {{#if user.posts.length}}
       {{#each user.posts}}
-        <li><a href="/edit-post/{{id}}">{{title}}</a></li>
+      <a class='remove-blue' href="/edit-post/{{id}}">
+      <div class="post">
+        <ul>
+            <li><h4>{{title}}</h4></li>
+            <p>Created on {{format_date created_at}}</p>
+        </ul>
+      </div>   
+      </a>
       {{/each}}
-    </ul>
-  {{else}}
-    <p>You haven't made any posts yet.</p>
-  {{/if}}
-  <h2>Your Comments</h2>
-  {{#if user.comments.length}}
-    <ul>
-      {{#each user.comments}}
-        <li><a href="/post/{{Post.id}}">{{Post.title}}</a>{{comment_text}}</li>
-      {{/each}}
-    </ul>
-  {{else}}
-    <p>You haven't made any comments yet.</p>
-  {{/if}}
-  <button id="new-post-button"><a href="/new-post">Add New Post</a></button>
-
+      {{else}}
+        <p>You haven't made any posts yet.</p>
+      {{/if}}
+      <h3>Your Comments</h2>
+      {{#if user.comments.length}}
+        <ul>
+          {{#each user.comments}}
+            <li><a
+                href="/post/{{Post.id}}"
+              >{{Post.title}}</a>{{comment_text}}</li>
+          {{/each}}
+        </ul>
+      {{else}}
+        <p>You haven't made any comments yet.</p>
+      {{/if}}
+      <button id="new-post-button"><a class='remove-blue'href="/new-post">Add New Post</a></button>
+    </div>
+  </div>
