'fixed bugs in handlebars'

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -7,7 +7,7 @@
       rel="stylesheet"
       href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
     />
-    <link rel="stylesheet" href="./css/style.css"/>
+    <link rel="stylesheet" href="/css/style.css"/>
     <title>Blog-Site</title>
   </head>
   <body>
@@ -27,7 +27,9 @@
         </nav>
       </div>
     </header>
+
     {{{body}}}
+
     {{#if logged_in}}
     <script src="/js/logout.js"></script>
     {{/if}}
