--- a/views/new-post.handlebars
+++ b/views/new-post.handlebars
@@ -1,13 +1,11 @@
+<div class="container">
   <h1>Add New Post</h1>
   <form id="new-post-form">
     <label for="title">Title:</label>
-    <input type="text" name="title" id="post-title">
+    <input type="text" name="title" id="post-title" />
     <label for="content">Content:</label>
     <textarea name="content" id="post-content"></textarea>
     <button type="submit">Create Post</button>
   </form>
-  <script src='/js/createPost.js'></script>
-
-
-
-
+  <script src="/js/createPost.js"></script>
+</div>
